samples/_failures_safe/1761430034_7cbecc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b00bb3b.c: In function ‘main’:
./samples/SAFE/__tmp_1b00bb3b.c:160:16: error: expected ‘;’ at end of input
  160 |         fprintf
      |                ^
      |                ;
./samples/SAFE/__tmp_1b00bb3b.c:160:9: error: expected declaration or statement at end of input
  160 |         fprintf
      |         ^~~~~~~
./samples/SAFE/__tmp_1b00bb3b.c:160:9: error: expected declaration or statement at end of input
